# bytestream.c

./: .gitignore  COPYING  Makefile.am  autogen  configure.ac
include/: bs.h
lib/: alloc.c  bs.c  bs_accumulate.c  bs_alloc.c  bs_alloc.h  bs_base64.c  bs_combine.c  bs_compare.c  bs_encodings.c  bs_encodings.h  bs_hex.c  bs_internal.h  bs_stream.c  combine.c  compare.c  encodings.c  encodings.h  filter.c  fold.c  map.c  stream.c  walk.c
lib/encodings/: base64.c  hex.c
src/: bs.c  bs_accumulate.c  bs_alloc.c  bs_alloc.h  bs_base64.c  bs_combine.c  bs_compare.c  bs_hex.c  bs_misc.c  bs_stream.c  bs_string.c  bs_walk.c
tests/: alloc.c  bs.c  bs_accumulate.c  bs_alloc.c  bs_base64.c  bs_combine.c  bs_compare.c  bs_filter.c  bs_hex.c  bs_misc.c  bs_stream.c  bs_string.c  bs_walk.c  combine.c  compare.c  encodings.c  filter.c  fold.c  map.c  stream.c  walk.c
tests/encodings/: base64.c  hex.c
